Back button on NewRecipeActivity and IngredientActivity was added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MintThursday"
         tools:ignore="ExtraText">
+        <activity android:name=".IngredientActivity"></activity>
         <activity android:name=".NewRecipeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,7 +24,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
     </application>
 
 </manifest>
