--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ru.startandroid.mintthursday">
+    package="com.mintthursday">
 
     <application
         android:allowBackup="true"
@@ -11,9 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MintThursday"
         tools:ignore="ExtraText">
-        <activity android:name=".IngredientActivity"></activity>
-        <activity android:name=".NewRecipeActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.mintthursday.IngredientActivity"></activity>
+        <activity android:name="com.mintthursday.NewRecipeActivity" />
+        <activity android:name="com.mintthursday.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
