--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.mintthursday">
 
     <application
-        android:name="com.mintthursday.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,9 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MintThursday"
         tools:ignore="ExtraText">
-        <activity android:name="com.mintthursday.IngredientActivity"></activity>
-        <activity android:name="com.mintthursday.NewRecipeActivity" />
-        <activity android:name="com.mintthursday.MainActivity">
+        <activity
+            android:name=".ShowRecipeActivity"
+            android:exported="true" />
+        <activity android:name=".IngredientActivity" />
+        <activity android:name=".NewRecipeActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
