--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,14 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
 }
-//apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.mintthursday"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -43,13 +42,19 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation 'com.google.code.gson:gson:2.8.7'
+
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.terrakok:cicerone:7.1'
+
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
+    implementation "androidx.browser:browser:1.3.0"
 }
 repositories {
     mavenCentral()
